--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "nextjs-admin-template",
+  "homepage": "https://Amjath2611.github.io/connectTek",
+  "name": "iot-dashboard",
   "private": true,
   "description": "Admin dashboard template based on nextjs with @paljs/ui component package",
   "version": "0.1.0",
-  "author": "Ahmed Elywa",
+  "author": "",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "29.1.0",
     "@ckeditor/ckeditor5-react": "3.0.2",
@@ -53,6 +54,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.1",
     "eslint-plugin-react": "7.24.0",
+    "gh-pages": "^3.2.3",
     "husky": "7.0.2",
     "prettier": "2.3.2",
     "pretty-quick": "3.1.1",
