--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Amjath2611.github.io/connectTek",
+  "homepage": "iotdashboard",
   "name": "iot-dashboard",
   "private": true,
   "description": "",
@@ -32,7 +32,8 @@
     "build": "next build",
     "start": "next start --port ${PORT-3000}",
     "export": "yarn build && next export -o _static",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "next lint"
   },
   "devDependencies": {
     "@types/node": "16.7.1",
@@ -43,15 +44,21 @@
     "@types/styled-components": "5.1.12",
     "@typescript-eslint/eslint-plugin": "4.29.3",
     "@typescript-eslint/parser": "4.29.3",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "3.4.1",
-    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^3.2.3",
     "husky": "7.0.2",
     "prettier": "2.3.2",
     "pretty-quick": "3.1.1",
     "react-live": "2.3.0",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
